<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0000000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="#fbfbfb"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_content" 
            android:layout_gravity="center"
            android:textColor="@color/black_txt"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/play_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/play_real"
                android:textColor="@color/black_txt"
                 />

            <Button
                android:id="@+id/play_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/play_back"
                android:textColor="@color/black_txt"
                 />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>