<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设备Id:" />

        <TextView
            android:id="@+id/device_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <View
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="视频通道号:" />

        <TextView
            android:id="@+id/video_channal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="报警通道号:" />

        <TextView
            android:id="@+id/alarm_channel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="报警类型" />

        <Spinner
            android:id="@+id/type_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <Button
            android:id="@+id/bukong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bukong" />

        <Button
            android:id="@+id/sakong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/sakong" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bumeng_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/bumeng_code" />

        <EditText
            android:id="@+id/edit_department_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/edit_department_code"
            android:inputType="numberDecimal" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/according_bumeng_bukong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/according_department_bukong" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_alarm_activity"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >
    </ListView>

</LinearLayout>